# BST_practice

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  bst.c  bst.h  main.c
src/TASK_C/: BST_C.c
src/task_A/: bst.c
src/task_B/: orders.c
src/task_C/: BST_C.c
src/task_D/: remove_el_from_bst.c
src/task_E/: mergeTrees.c
src/task_F/: checkCorrectness.c
src/task_G/: kthMin.c
src/task_H/: iterator.c
src/task_I/: Reflection.md
